--- a/resources/assets/css/foodle.css
+++ b/resources/assets/css/foodle.css
@@ -2,3 +2,12 @@ body
 {
     font-family: 'Maven Pro', sans-serif;
 }
+.fixed-nav-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 50px;
+    background-color: #00a087;
+}
